# sqlmesh-brownfield-dbt

./: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
macros/: dump_table.sql
models/: customers.sql  orders.sql  schema.yml
models/staging/: stg_customers.sql
