[tool.poetry]
name = "jaffle-shop-classic"
version = "0.1.0"
description = ""
authors = ["SoerenStahlmann <mannstahl@hotmail.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.7"
dbt-duckdb = "^1.9.0"
sqlmesh = {extras = ["web"], version = "^0.128.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"